[gd_scene load_steps=3 format=3 uid="uid://b5yq8k2m4n1wx"]

[ext_resource type="Script" path="res://scripts/battle/grid_cell.gd" id="1_cell"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_default"]
size = Vector2(150, 150)

[node name="GridCell" type="Area2D"]
input_pickable = true
script = ExtResource("1_cell")

[node name="Background" type="ColorRect" parent="."]
mouse_filter = 2
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
color = Color(0.2, 0.2, 0.25, 1)

[node name="Border" type="ColorRect" parent="."]
mouse_filter = 2
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = -70.0
color = Color(0.4, 0.4, 0.5, 1)

[node name="Border2" type="ColorRect" parent="."]
mouse_filter = 2
offset_left = -75.0
offset_top = 70.0
offset_right = 75.0
offset_bottom = 75.0
color = Color(0.4, 0.4, 0.5, 1)

[node name="Border3" type="ColorRect" parent="."]
mouse_filter = 2
offset_left = -75.0
offset_top = -75.0
offset_right = -70.0
offset_bottom = 75.0
color = Color(0.4, 0.4, 0.5, 1)

[node name="Border4" type="ColorRect" parent="."]
mouse_filter = 2
offset_left = 70.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
color = Color(0.4, 0.4, 0.5, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_default")

[node name="OwnerIndicator" type="ColorRect" parent="."]
mouse_filter = 2
visible = false
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
color = Color(0.3, 0.5, 1, 0.5)

[node name="HoverEffect" type="ColorRect" parent="."]
mouse_filter = 2
visible = false
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
color = Color(1, 1, 1, 0.1)
